<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTerrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/inilayers"
        app:srcCompat="@drawable/ic_layers" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/inizoomin"
        app:srcCompat="@drawable/ic_zoom_in" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/inizoomout"
        app:srcCompat="@drawable/ic_zoom_out" />

</FrameLayout>
