<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_card"
        android:elevation="4dp"
        android:padding="16dp"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/storyImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/ini_gambar"
            android:scaleType="centerCrop"
            android:transitionName="story_image"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/storyTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@drawable/text_color_selector"
            android:transitionName="story_title"
            android:text="@string/ini_nama"/>

        <TextView
            android:id="@+id/storyDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@drawable/text_color_selector"
            android:transitionName="story_description"
            android:text="@string/ini_deskripsi"/>
    </LinearLayout>
</ScrollView>